--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>mama i can code now</h1>
+    <h2>i can push to code</h2>
+    <h3>new code changed</h3>
+
 </body>
 </html>
